style: fix account size on deletion text contrast (#5949)
Partially supersedes
https://github.com/deltachat/deltachat-desktop/pull/4259.

--- a/packages/frontend/src/components/screens/AccountDeletionScreen/styles.module.scss
+++ b/packages/frontend/src/components/screens/AccountDeletionScreen/styles.module.scss
@@ -54,5 +54,5 @@
 
 .accountSize {
   font-size: smaller;
-  color: #c0c0c0;
+  color: var(--textSecondary);
 }
